// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavigationItem /> Should render correctly 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  z-index: 1;
  width: 100%;
  padding: 0;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  border: none;
  border-radius: 0.35rem;
  background: none;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: 0.2rem 0.2rem 0.5rem 0 rgba(37,32,31,0.3);
  cursor: pointer;
  box-sizing: border-box;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:not(:disabled):focus,.c0:not(:disabled):focus-within,
.c0:not(:disabled):active,.c0:not(:disabled):hover {
  box-shadow: 0.4rem 0.4rem 1rem 0 rgba(37,32,31,0.3);
}

.c2 {
  position: relative;
  width: 100%;
  height: 100%;
  border-radius: 0.35rem;
  overflow: hidden;
}

.c3 {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: calc(100% + 2rem);
  height: calc(100% + 2rem);
  margin-top: -1rem;
  margin-left: -1rem;
  background-color: white;
  background-position: center;
  background-size: cover;
}

.c4 {
  padding: 2rem;
}

.c1 {
  color: #1e1e1e;
}

.c1:focus,
.c1:active,
.c1:hover {
  color: #44aeff;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
}

.c6 {
  position: relative;
  z-index: 3;
  border-radius: 0.35rem;
  overflow: hidden;
  box-sizing: border-box;
  width: 6.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 3;
  min-width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: center;
}

.c8 {
  margin: 0;
  font-size: 2.2rem;
  font-weight: bold;
}

@media (prefers-color-scheme:dark) {
  .c0 {
    box-shadow: 0.44rem 0.44rem 1rem 0 transparent;
  }
}

@media (prefers-color-scheme:dark) {
  .c0:not(:disabled):focus,.c0:not(:disabled):focus-within,
  .c0:not(:disabled):active,.c0:not(:disabled):hover {
    box-shadow: 0.2rem 0.2rem 0.5rem 0 transparent;
  }
}

@media (prefers-color-scheme:dark) {
  .c3 {
    background-color: #1e1e1e;
  }
}

@media (prefers-color-scheme:dark) {
  .c1 {
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c1:focus,
  .c1:active,
  .c1:hover {
    color: #44aeff;
  }
}

@media (min-width:32.25rem) {
  .c5 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:32.25rem) {
  .c7 {
    min-width: 10rem;
    text-align: unset;
  }
}

<div>
  <a
    class="c0 c1"
    href="/test"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      />
      <div
        class="c4"
      >
        <div
          aria-hidden="true"
          class="c5"
        >
          <div
            class="c6 date container"
          />
          <div
            class="c7"
          >
            <h1
              class="c8"
            />
          </div>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`<NavigationItem /> Should render correctly hrefExternal 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  z-index: 1;
  width: 100%;
  padding: 0;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  border: none;
  border-radius: 0.35rem;
  background: none;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: 0.2rem 0.2rem 0.5rem 0 rgba(37,32,31,0.3);
  cursor: pointer;
  box-sizing: border-box;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:not(:disabled):focus,.c0:not(:disabled):focus-within,
.c0:not(:disabled):active,.c0:not(:disabled):hover {
  box-shadow: 0.4rem 0.4rem 1rem 0 rgba(37,32,31,0.3);
}

.c2 {
  position: relative;
  width: 100%;
  height: 100%;
  border-radius: 0.35rem;
  overflow: hidden;
}

.c3 {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: calc(100% + 2rem);
  height: calc(100% + 2rem);
  margin-top: -1rem;
  margin-left: -1rem;
  background-color: white;
  background-position: center;
  background-size: cover;
}

.c4 {
  padding: 2rem;
}

.c1 {
  color: #1e1e1e;
}

.c1:focus,
.c1:active,
.c1:hover {
  color: #44aeff;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
}

.c6 {
  position: relative;
  z-index: 3;
  border-radius: 0.35rem;
  overflow: hidden;
  box-sizing: border-box;
  width: 6.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 3;
  min-width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: center;
}

.c8 {
  margin: 0;
  font-size: 2.2rem;
  font-weight: bold;
}

@media (prefers-color-scheme:dark) {
  .c0 {
    box-shadow: 0.44rem 0.44rem 1rem 0 transparent;
  }
}

@media (prefers-color-scheme:dark) {
  .c0:not(:disabled):focus,.c0:not(:disabled):focus-within,
  .c0:not(:disabled):active,.c0:not(:disabled):hover {
    box-shadow: 0.2rem 0.2rem 0.5rem 0 transparent;
  }
}

@media (prefers-color-scheme:dark) {
  .c3 {
    background-color: #1e1e1e;
  }
}

@media (prefers-color-scheme:dark) {
  .c1 {
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c1:focus,
  .c1:active,
  .c1:hover {
    color: #44aeff;
  }
}

@media (min-width:32.25rem) {
  .c5 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:32.25rem) {
  .c7 {
    min-width: 10rem;
    text-align: unset;
  }
}

<div>
  <a
    class="c0 c1"
    href="https://duckduckgo.com/"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      />
      <div
        class="c4"
      >
        <div
          aria-hidden="true"
          class="c5"
        >
          <div
            class="c6 date container"
          />
          <div
            class="c7"
          >
            <h1
              class="c8"
            />
          </div>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`<NavigationItem /> Should render correctly with custom className 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  z-index: 1;
  width: 100%;
  padding: 0;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  border: none;
  border-radius: 0.35rem;
  background: none;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: 0.2rem 0.2rem 0.5rem 0 rgba(37,32,31,0.3);
  cursor: pointer;
  box-sizing: border-box;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:not(:disabled):focus,.c0:not(:disabled):focus-within,
.c0:not(:disabled):active,.c0:not(:disabled):hover {
  box-shadow: 0.4rem 0.4rem 1rem 0 rgba(37,32,31,0.3);
}

.c2 {
  position: relative;
  width: 100%;
  height: 100%;
  border-radius: 0.35rem;
  overflow: hidden;
}

.c3 {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: calc(100% + 2rem);
  height: calc(100% + 2rem);
  margin-top: -1rem;
  margin-left: -1rem;
  background-color: white;
  background-position: center;
  background-size: cover;
}

.c4 {
  padding: 2rem;
}

.c1 {
  color: #1e1e1e;
}

.c1:focus,
.c1:active,
.c1:hover {
  color: #44aeff;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
}

.c6 {
  position: relative;
  z-index: 3;
  border-radius: 0.35rem;
  overflow: hidden;
  box-sizing: border-box;
  width: 6.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 3;
  min-width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: center;
}

.c8 {
  margin: 0;
  font-size: 2.2rem;
  font-weight: bold;
}

@media (prefers-color-scheme:dark) {
  .c0 {
    box-shadow: 0.44rem 0.44rem 1rem 0 transparent;
  }
}

@media (prefers-color-scheme:dark) {
  .c0:not(:disabled):focus,.c0:not(:disabled):focus-within,
  .c0:not(:disabled):active,.c0:not(:disabled):hover {
    box-shadow: 0.2rem 0.2rem 0.5rem 0 transparent;
  }
}

@media (prefers-color-scheme:dark) {
  .c3 {
    background-color: #1e1e1e;
  }
}

@media (prefers-color-scheme:dark) {
  .c1 {
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c1:focus,
  .c1:active,
  .c1:hover {
    color: #44aeff;
  }
}

@media (min-width:32.25rem) {
  .c5 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:32.25rem) {
  .c7 {
    min-width: 10rem;
    text-align: unset;
  }
}

<div>
  <a
    class="c0 c1 test-custom-classname"
    href="/test"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      />
      <div
        class="c4"
      >
        <div
          aria-hidden="true"
          class="c5"
        >
          <div
            class="c6 date container"
          />
          <div
            class="c7"
          >
            <h1
              class="c8"
            />
          </div>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`<NavigationItem /> Should render with nextified href 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  z-index: 1;
  width: 100%;
  padding: 0;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  border: none;
  border-radius: 0.35rem;
  background: none;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: 0.2rem 0.2rem 0.5rem 0 rgba(37,32,31,0.3);
  cursor: pointer;
  box-sizing: border-box;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:not(:disabled):focus,.c0:not(:disabled):focus-within,
.c0:not(:disabled):active,.c0:not(:disabled):hover {
  box-shadow: 0.4rem 0.4rem 1rem 0 rgba(37,32,31,0.3);
}

.c2 {
  position: relative;
  width: 100%;
  height: 100%;
  border-radius: 0.35rem;
  overflow: hidden;
}

.c3 {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: calc(100% + 2rem);
  height: calc(100% + 2rem);
  margin-top: -1rem;
  margin-left: -1rem;
  background-color: white;
  background-position: center;
  background-size: cover;
}

.c4 {
  padding: 2rem;
}

.c1 {
  color: #1e1e1e;
}

.c1:focus,
.c1:active,
.c1:hover {
  color: #44aeff;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
}

.c6 {
  position: relative;
  z-index: 3;
  border-radius: 0.35rem;
  overflow: hidden;
  box-sizing: border-box;
  width: 6.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 3;
  min-width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: center;
}

.c8 {
  margin: 0;
  font-size: 2.2rem;
  font-weight: bold;
}

@media (prefers-color-scheme:dark) {
  .c0 {
    box-shadow: 0.44rem 0.44rem 1rem 0 transparent;
  }
}

@media (prefers-color-scheme:dark) {
  .c0:not(:disabled):focus,.c0:not(:disabled):focus-within,
  .c0:not(:disabled):active,.c0:not(:disabled):hover {
    box-shadow: 0.2rem 0.2rem 0.5rem 0 transparent;
  }
}

@media (prefers-color-scheme:dark) {
  .c3 {
    background-color: #1e1e1e;
  }
}

@media (prefers-color-scheme:dark) {
  .c1 {
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c1:focus,
  .c1:active,
  .c1:hover {
    color: #44aeff;
  }
}

@media (min-width:32.25rem) {
  .c5 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:32.25rem) {
  .c7 {
    min-width: 10rem;
    text-align: unset;
  }
}

<div>
  <a
    class="c0 c1"
    href="/blog/test"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      />
      <div
        class="c4"
      >
        <div
          aria-hidden="true"
          class="c5"
        >
          <div
            class="c6 date container"
          />
          <div
            class="c7"
          >
            <h1
              class="c8"
            />
          </div>
        </div>
      </div>
    </div>
  </a>
</div>
`;
